refactor: getFirst() and getLast() instead of get(0) etc in bankServiceTest