@@ -6,17 +6,15 @@ import com.bpietrzak.stockmarket.model.BankStock;
 import com.bpietrzak.stockmarket.repository.BankStockRepository;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.ArgumentCaptor;
+import org.mockito.InOrder;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import org.mockito.ArgumentCaptor;
-
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import org.mockito.InOrder;
-
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.inOrder;
 import static org.mockito.Mockito.verify;
@@ -42,10 +40,10 @@ class BankServiceTest {
 
         // check result
         assertThat(result.stocks()).hasSize(2);
-        assertThat(result.stocks().get(0).name()).isEqualTo("example");
-        assertThat(result.stocks().get(0).quantity()).isEqualTo(10);
-        assertThat(result.stocks().get(1).name()).isEqualTo("other");
-        assertThat(result.stocks().get(1).quantity()).isEqualTo(5);
+        assertThat(result.stocks().getFirst().name()).isEqualTo("example");
+        assertThat(result.stocks().getFirst().quantity()).isEqualTo(10);
+        assertThat(result.stocks().getLast().name()).isEqualTo("other");
+        assertThat(result.stocks().getLast().quantity()).isEqualTo(5);
     }
 
     @Test
@@ -63,12 +61,13 @@ class BankServiceTest {
         inOrder.verify(bankStockRepository).saveAll(any());
 
         // check new stocks saved
+        @SuppressWarnings("unchecked")
         ArgumentCaptor<List<BankStock>> captor = ArgumentCaptor.forClass(List.class);
         verify(bankStockRepository).saveAll(captor.capture());
         List<BankStock> saved = captor.getValue();
         assertThat(saved).hasSize(1);
-        assertThat(saved.get(0).getName()).isEqualTo("newstock");
-        assertThat(saved.get(0).getQuantity()).isEqualTo(20);
+        assertThat(saved.getFirst().getName()).isEqualTo("newstock");
+        assertThat(saved.getFirst().getQuantity()).isEqualTo(20);
     }
 
     @Test
@@ -82,6 +81,7 @@ class BankServiceTest {
 
         // check old stocks deleted and nothing saved
         verify(bankStockRepository).deleteAllInBatch();
+        @SuppressWarnings("unchecked")
         ArgumentCaptor<List<BankStock>> captor = ArgumentCaptor.forClass(List.class);
         verify(bankStockRepository).saveAll(captor.capture());
         assertThat(captor.getValue()).isEmpty();
